themes/globenow-tiles/style.css
/*
	Theme Name: Globe Now Tiles
	Theme URI: http://www.theglobeandmail.com
	Description: A tile-based layout for The Globe and Mail's Wordpress theme, built up from Todd Motto's HTML5 Blank theme
	Version: 0.1
	Author: Stuart A. Thompson and Matt Frehner
	Author URI: http://www.theglobeandmail.com
	Tags: Blank, HTML5, CSS3
	
	License: MIT
	License URI: http://opensource.org/licenses/mit-license.php
*/

/*------------------------------------*\
    MAIN
\*------------------------------------*/

/* global box-sizing */
*,
*:after,
*:before {
	box-sizing:border-box;
	-webkit-box-sizing:border-box;
	-moz-box-sizing:border-box;
	-webkit-font-smoothing:antialiased;
	font-smoothing:antialiased;
	text-rendering:optimizeLegibility;
}
/* html element 62.5% font-size for REM use */
html {
	font-size:62.5%;
}
body {
	font:13px/1.5 "OpenSans", Verdana, Helvetica, Arial, sans-serif;
	color:#000;
	background-color:#eeeeee;
}
/* clear */
.clear:before,
.clear:after {
    content:' ';
    display:table;
}

.clear:after {
    clear:both;
}
.clear {
    *zoom:1;
}
img {
	max-width:100%;
	height:auto;
	vertical-align:bottom;
}
iframe{
	max-width:100%;
	border:0;
}
a {
	color:red;
	text-decoration:none !important;
}
a:hover {
	color:#d60000;
}
a:focus {
	outline:0;
}
a:hover,
a:active {
	outline:0;
}
input{
	font: 13px/1.5 "OpenSans", Verdana, Helvetica, Arial, sans-serif !important;
	box-shadow:0;
	-webkit-box-shadow: 0;
	-moz-box-shadow: 0;
}
input:focus {
	outline:0;
	border:1px solid #04A4CC;
}
.clearfloat{
	clear:both;
}
.mobile-hide{
	display:none;
}
/*------------------------------------*\
    STRUCTURE
\*------------------------------------*/

/* wrapper */
.wrapper{
	padding: 50px 0px 20px 0px;
	width: 680px;
	margin:0 auto;
	position:relative;
	z-index: 2;
}
.strip {
background-color: #424242;
clear: both;
display: block;
height: 5px;
line-height: 1;
position: relative;
}
.strip.small{
	height:0px;
	background-color:#eee;
	margin:0 0 0;
}
/* loop */
#loop{
	width:100%;
}
#new-alert-container{
	display:none;
	font-family:"OpenSans",Helvetica,Arial,sans-serif;
	background-color: #f5f5f5;
	border: 1px solid #d2d2d2;
	margin-bottom: 20px;
	top: -1px;
	font-size: 13px;
	text-shadow: 0 1px 1px rgba(255,255,255,.6);
	-webkit-box-shadow: inset 0 3px 8px rgba(0,0,0,.05);
	box-shadow: inset 0 3px 8px rgba(0,0,0,.05);
}
a#new-alert{
	display:block;
	font-weight:bold;
	text-transform: uppercase;
	font-family:"OpenSans",Helvetica,Arial,sans-serif;
	padding:13px 0;
	text-align:center;
	width:100%;
	color:#040404;
	line-height:1.3;
}
a#new-alert img{
	margin-right:4px;
}
a#new-alert:hover{
	background-color:#efefef;
	text-decoration: none;
}
#new-alert{
	color:#d60000;
}
.select-label{
	float: left;
	margin-right: 10px;
	font-size: 13px;
	font-family:"PrattHeavy",sans-serif;
	margin-top: 5px;
	text-transform: uppercase;
}/* loop article */
article{
	background-color:white;
	padding:20px;
	margin:10px 0;
	border:1px solid #d2d2d2;
	position: relative;
}
article.unseen{
	background-color:#FCFFF0;
	border:1px solid rgb(216, 210, 180);
}
article h2{
	font-family:"PrattHeavy",Georgia,sans-serif;
	font-weight:normal;
	font-size:23px;
	margin:0 0 20px 0;
}
article h2 a{
	color:#000;
}
article h2 a:hover{
	color:#000;
}
.post-content{
	margin:0 40px;
}
/* Post types */
.breaking h2{
}
.breaking .date span, .breaking .date span a{
	color:#d60000;
}
/* Meta */
.date-container{
	font-family:"PrattHeavy",Helvetica,Arial,sans-serif;
	text-transform: uppercase;
	color:#515151;
	font-weight:normal;
	border-bottom:1px solid #d2d2d2;
	padding:0 0 10px 0;
	margin:0 -20px 20px;
}
.date{
	padding:0 20px;
	float:left;
}
.date span{
	color:black;
	padding-right:10px;
}
.date span{
	margin-right:5px;
}
.date span a{
	color:black;
}
.datedate,.datetime{
	float:left;
}
.datetime a, .datetime a:hover{
	color:#515151;	
	font-family:"OpenSans",Helvetica,Arial,sans-serif;
}
.byline{
	font: normal 11px/1.5 "PrattHeavy", Helvetica,Arial,sans-serif;
	text-transform: uppercase;
	font-weight:normal;
	color:#000;
	margin:10px 0;
}
.placeline{
	color:#000;
	font:normal 11px/1.5 "PrattHeavy",Helvetica,Arial,sans-serif;
	font-weight:normal;
}
.content{
	width: 100%;
}
.content #tgam_video{
	width:100% !important;
}
.single h3.moreposts,.search h3.searchresults{
	font-size: 13px;
	text-transform: uppercase;
	margin:20px 0 -11px !important;
	border:1px solid #DBDBDB;
	padding:10px 0;
	background-color:#F8F8F8;
	text-align: center;
}
.single .standalone{
}

/* tags */
.tags {
clear: both;
display: inline-block;
padding-top:20px;
}
.tags .tag a{
	color:#777;
}
.tags .tag {
font: bold 10px/11px "PrattHeavy",Arial, Helvetica, sans-serif;
text-transform: uppercase;
font-weight:normal;
color: #777;
background-color: #eeeeee;
background-color: #bfbfbf;
padding: 4px 16px 4px 6px;
margin: 0px 5px 5px 0;
-webkit-border-radius: 3px;
-moz-border-radius: 3px;
border-radius: 3px;
display: inline-block;
cursor: pointer;
-webkit-font-smoothing: antialiased;
background: url("http://beta.images.theglobeandmail.com/static/ROB/interactives/crisis/images/filter-add.png") no-repeat scroll right center #eeeeee;
}
.tags .tag:hover{
	background-color:#e8e8e8;
}
.tooltip{
	font:bold 11px/12px "OpenSans", Arial,Helvetica,sans-serif;
	-webkit-font-smoothing:antialiased;
	min-width:60px;
}
/* Post types */
.fullwidth h2{
	display:none;
}
.single .fullwidth h2{
	display:block;
}
/* social */
.gig-button-container{
	float: right;
	position: relative;
	margin-top:-3px;
}
.share-reaction-icon{
	margin-bottom:0;
}
.share-reaction-icon.pin img{
	display:none;
}
.sticky .share-reaction-icon.pin img{
	opacity:1 !important;
}
.share-reaction-icon{
	margin-bottom: 6px;
	width:20px;
	height:20px;
	float: left;
	margin-right: 6px;
}
.share-link{
	position: absolute;
	right: 6px;
	bottom: -25px;
	background-color: white;
}
.share-link input{
	border: 1px solid #E2E2E2;
	padding: 3px;
	box-shadow: 3px 3px 3px #E7E7E7;
	font-size: 10px !important;
}
/* ... */

